test/mutation_analysis/s0942_di_string_match/hafis/starchat/mutants/49/result.txt
./test/mutation_analysis/s0942_di_string_match/hafis/starchat/mutants/49/Solution.java:31: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
